--- a/style.css
+++ b/style.css
@@ -1,11 +1,54 @@
-
-h1{
+*{
+    box-sizing: border-box;
+}
+body{
+    background-color: #caf7e3;
+    margin: 0;
     text-align: center;
     font-family: 'Chango', cursive;
-    font-size: 60px;
+}
+.head{
+    background-image: url("images/imagehead.jpeg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+h1{
+    font-size: 5vw;
+    color: #fdd835;
+    display: inline-flex;
+    margin: 0;
+    word-spacing: 2px;
+}
+a{
+    text-decoration: none;
     color: black;
 }
-.lecture{
-    margin: 20px 20px;
-    font-family: Arial, Helvetica, sans-serif;
+a:visited{
+    text-decoration: none;
+}
+a:hover{
+    color: white;
+}
+button{
+    width: 92px;
+    height: 40px;
+    margin: 20px 15px;
+    border: 0px;
+    border-radius: 10px;
+    font-size: revert;
+    background-color: #78c4d4;
+}
+button:hover{
+    background-color: #e686a9 ;
+    border-bottom: 6px solid white;
+}
+button:focus{
+    outline: 0px;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #23689b;
 }
