--- a/style.css
+++ b/style.css
@@ -1,33 +1,46 @@
-*{
-    box-sizing: border-box;
-}
 body{
-    background-color: #caf7e3;
     margin: 0;
-    text-align: center;
-    font-family: 'Chango', cursive;
 }
-.head{
-    background-image: url("images/imagehead.jpeg");
+.nav-bar{
+    list-style: none;
+    margin:0;
+    padding: 0;
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.nav-con{
+    display: inline;
+    float: left;
+}
+
+.nav-con a{
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+}
+.nav-con a:hover{
+    background-color: #111;
+}
+
+.active{
+    background-color: #4caf50;
+}
+
+h1{
+    text-align: center;
     background-repeat: no-repeat;
     background-size: 100%;
-}
-h1{
-    font-size: 5vw;
-    color: #fdd835;
-    display: inline-flex;
-    margin: 0;
+    height: 100px;
     word-spacing: 2px;
-}
-a{
-    text-decoration: none;
-    color: black;
-}
-a:visited{
-    text-decoration: none;
-}
-a:hover{
     color: white;
+    padding-top: 54px;
+    font-size: 42px;
 }
 button{
     width: 92px;
@@ -36,19 +49,90 @@ button{
     border: 0px;
     border-radius: 10px;
     font-size: revert;
-    background-color: #78c4d4;
+    background-color: #333333;
+}
+
+a{
+    color:white;
+    font-weight: bold;
+    text-decoration: none;
+}
+a:hover{
+    color: white;
 }
 button:hover{
-    background-color: #e686a9 ;
-    border-bottom: 6px solid white;
+    background-color: #111 ;
 }
 button:focus{
-    outline: 0px;
+    outline: none;
 }
-footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #23689b;
+/* communication lecture */
+#communication{
+    /* margin-top: 92px; */
+    text-align: center;
+    background-color: #e6e6e6;
+    /* display: none; */
+}
+
+#communication h1{
+    background-color: #4caf50;
+}
+/* analog circuit */
+#analog{
+    margin-top: 74px;
+    text-align: center;
+    background-color: #e6e6e6;
+    /* display: none; */
+}
+
+#analog h1{
+    background-color: #4caf50;
+}
+/* network theory */
+#network{
+    /* margin-top: 92px; */
+    text-align: center;
+    background-color: #e6e6e6;
+    /* display: none; */
+}
+
+#network h1{
+    background-color: #4caf50;
+}
+/* digital electronics */
+#digital{
+    /* margin-top: 92px; */
+    text-align: center;
+    background-color: #e6e6e6;
+    /* display: none; */
+}
+#digital h1{
+    background-color: #4caf50;
+}
+
+/* electronics device */
+#electronics{
+    /* margin-top: 92px; */
+    text-align: center;
+    background-color: #e6e6e6;
+    /* display: none; */
+}
+#electronics h1{
+    background-color: #4caf50;
+}
+/* mathematics */
+#math{
+    text-align: center;
+    background-color: #e6e6e6;
+}
+#math h1{
+    background-color: #4caf50;
+}
+/* control system */
+#control{
+    text-align: center;
+    background-color: #e6e6e6;
+}
+#control h1{
+    background-color: #4caf50;
 }
