--- a/style.css
+++ b/style.css
@@ -144,3 +144,11 @@ button:focus{
 #signal h1{
     background-color: #4caf50;
 }
+/* electromagnetic field theory */
+#emft{
+    text-align: center;
+    background-color: #e6e6e6;
+}
+#emft h1{
+    background-color: #4caf50;
+}
